--- a/src/app/layout/shared/sidebar/sidebar.component.html
+++ b/src/app/layout/shared/sidebar/sidebar.component.html
@@ -2,13 +2,13 @@
 <div class="sidebar" [ngClass]="{ 'open': isOpen }">
     <ul>
         <li>
-            <a routerLink="/home"  routerLinkActive="active">Home</a>
+            <a routerLink="/home"  (click)="toggleSidebar()" routerLinkActive="active">Home</a>
         </li>
         <li>
-            <a routerLink="/settings"  routerLinkActive="active">Setting</a>
+            <a routerLink="/settings"  (click)="toggleSidebar()" routerLinkActive="active">Setting</a>
         </li>
         <li>
-            <a routerLink="/search"  routerLinkActive="active">Search</a>
+            <a routerLink="/search"  (click)="toggleSidebar()" routerLinkActive="active">Search</a>
         </li>
     </ul>
     <button class="close-btn" (click)="toggleSidebar()">
