--- a/src/app/layout/shared/menu-item/menu-item.component.html
+++ b/src/app/layout/shared/menu-item/menu-item.component.html
@@ -1,7 +1,5 @@
 <div class="menu-item">
-  <p>menu item works!</p>
-    <img   alt="{{ menuItem.name }}" />
-    <!--<img *ngIf="menuItem.imageUrl" [src]="menuItem.imageUrl" alt="{{ menuItem.name }}" />-->
+    <img *ngIf="menuItem.imageUrl" [src]="menuItem.imageUrl" alt="{{ menuItem.name }}" />
     <div>
       <h3>{{ menuItem.name }}</h3>
       <p>{{ menuItem.description }}</p>
