--- a/src/app/layout/shared/menu-bar/menu-bar.component.css
+++ b/src/app/layout/shared/menu-bar/menu-bar.component.css
@@ -7,7 +7,7 @@
 
 .menu-bar button {
   position: relative;
-  background-color: #f8f9fa;
+  background-color: #ffdf00;
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 10px 20px;
