--- a/src/app/layout/login/login/login.component.css
+++ b/src/app/layout/login/login/login.component.css
@@ -25,9 +25,9 @@
 .wrapper {
     width: 100%; /* Ensure wrapper takes full container width */
     max-width: 420px; /* Max width of wrapper to prevent stretching */
-    background-color: rgba(18, 54, 215, 0.4);
+    background-color: #e4d00a;
     border: 2px solid rgba(255, 255, 255, 02);
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(40px);
     color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
