--- a/src/app/layout/pages/home/home.component.css
+++ b/src/app/layout/pages/home/home.component.css
@@ -22,23 +22,40 @@ div {
 
   .cart-container {
     position: absolute;
-    top: 80px;
-    right: 10px;
+    top: 100px;
+    right: 15px;
     z-index: 1000;
   }
   
-  .cart-button {
-    padding: 10px 20px;
-    background-color: #007bff; /* Adjust the background color */
-    color: white;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
+  
+  .cart-icon {
     cursor: pointer;
+    font-size: 24px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+  }
+
+  .cart-icon-container {
+    position: absolute;
+    top: 100px;
+    right: 15px;
+    z-index: 1000;
   }
   
-  .cart-button:hover {
-    background-color: #0056b3; /* Adjust the hover color */
+  .cart-badge {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 1;
   }
+  
+  
   
   
