--- a/src/app/layout/pages/register/register.component.html
+++ b/src/app/layout/pages/register/register.component.html
@@ -117,7 +117,8 @@
           required
         />
         <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched" class="error">
-          Password must be at least 6 characters long.
+          <small *ngIf="registerForm.get('password')?.hasError('required')">Password is required.</small>
+          <small *ngIf="registerForm.get('password')?.hasError('minlength')">Password must be at least 6 characters long.</small>
         </div>
       </div>
   
