--- a/src/app/layout/shared/menu-item/menu-item.component.html
+++ b/src/app/layout/shared/menu-item/menu-item.component.html
@@ -1,19 +1,21 @@
-<div class="menu-item" (click)="openModal()">
+<div class="menu-container">
+  <div class="menu-item" (click)="openModal()">
     <img *ngIf="menuItem.imageUrl; else defaultImage" [src]="menuItem.imageUrl" alt="{{ menuItem.name }}" />
     <ng-template #defaultImage>
-      <img src="https://t3.ftcdn.net/jpg/04/34/72/82/360_F_434728286_OWQQvAFoXZLdGHlObozsolNeuSxhpr84.jpg" alt="Restaurant Logo" />
+      <img src="https://t3.ftcdn.net/jpg/04/34/72/82/360_F_434728286_OWQQvAFoXZLdGHlObozsolNeuSxhpr84.jpg"
+        alt="Restaurant Logo" />
       <!--<img src="assets/images/logo.png" alt="Restaurant Logo" />-->
     </ng-template>
     <div>
       <h3>{{ menuItem.name }}</h3>
-      <p>{{ menuItem.description }}</p>
+      <p *ngIf="menuItem.description && menuItem.description !== 'null'">
+        {{ menuItem.description.length < 80 ? menuItem.description : (menuItem.description | slice:0:60) + '...' }}
+      </p>
+      <!-- Display only first 150 characters -->
+      <p *ngIf="!menuItem.description || menuItem.description === 'null'"></p>
       <p>Price: {{ menuItem.price | currency }}</p>
     </div>
   </div>
+</div>
 
-  <app-item-modal
-  [menuItem]="menuItem"
-  [showModal]="showModal"
-  (close)="showModal = false"
-></app-item-modal>
-  
+<app-item-modal [menuItem]="menuItem" [showModal]="showModal" (close)="showModal = false"></app-item-modal>
