86eqyq76f: cart service issue fixed

--- a/src/app/layout/shared/item-modal/item-modal.component.html
+++ b/src/app/layout/shared/item-modal/item-modal.component.html
@@ -15,6 +15,9 @@
         <button (click)="changeQuantity(true)">+</button>
       </div>
   
+      <!-- Subtotal Display -->
+      <p>Subtotal: {{ getSubtotal() | currency }}</p>
+
       <button class="add-cart-btn" (click)="addToCart()">Add to Cart</button>
     </div>
   </div>
