--- a/src/app/layout/shared/item-modal/item-modal.component.css
+++ b/src/app/layout/shared/item-modal/item-modal.component.css
@@ -37,7 +37,7 @@
     top: 10px;
     right: 10px;
     cursor: pointer;
-    background-color: transparent;
+    background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border: none;
     padding: 5px;   
